--- a/FIT5032_MyAssignment/FIT5032_MyAssignment/FIT5032_MyAssignment.csproj
+++ b/FIT5032_MyAssignment/FIT5032_MyAssignment/FIT5032_MyAssignment.csproj
@@ -57,6 +57,9 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Providers.Core.2.0.0\lib\net40\System.Web.Providers.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
@@ -432,6 +435,8 @@
     <Content Include="Views\Movements\Details.cshtml" />
     <Content Include="Views\Movements\Edit.cshtml" />
     <Content Include="Views\Movements\Index.cshtml" />
+    <Content Include="Views\Shared\_LayoutU.cshtml" />
+    <Content Include="Views\Shared\_LayoutN.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
