--- a/FIT5032_AssignmentX/FIT5032_AssignmentX/FIT5032_AssignmentX.csproj
+++ b/FIT5032_AssignmentX/FIT5032_AssignmentX/FIT5032_AssignmentX.csproj
@@ -183,6 +183,8 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MovementsController.cs" />
     <Compile Include="Controllers\MovePlansController.cs" />
+    <Compile Include="Controllers\RecipePlansController.cs" />
+    <Compile Include="Controllers\RecipesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -210,6 +212,27 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Moves.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Recipe.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Recipe.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Recipe.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Recipe.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Recipe.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Recipe.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\RecipePlans.cs">
+      <DependentUpon>Recipe.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Recipes.cs">
+      <DependentUpon>Recipe.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -254,6 +277,17 @@
       <LastGenOutput>Moves.cs</LastGenOutput>
       <DependentUpon>Moves.edmx</DependentUpon>
     </Content>
+    <Content Include="Models\Recipe.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Recipe.Context.cs</LastGenOutput>
+      <DependentUpon>Recipe.edmx</DependentUpon>
+    </Content>
+    <Content Include="Models\Recipe.edmx.sql" />
+    <Content Include="Models\Recipe.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Recipe.cs</LastGenOutput>
+      <DependentUpon>Recipe.edmx</DependentUpon>
+    </Content>
     <Content Include="Scripts\bootstrap-datepicker.js" />
     <Content Include="Scripts\bootstrap-datepicker.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -269,6 +303,13 @@
     <Content Include="Content\bootstrap-datepicker3.css.map" />
     <Content Include="Content\bootstrap-datepicker.standalone.css.map" />
     <Content Include="Content\bootstrap-datepicker.css.map" />
+    <EntityDeploy Include="Models\Recipe.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Recipe.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\Recipe.edmx.diagram">
+      <DependentUpon>Recipe.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -407,6 +448,18 @@
     <Content Include="Views\MovePlans\Edit.cshtml" />
     <Content Include="Views\MovePlans\Index.cshtml" />
     <Content Include="Views\Shared\Disable.cshtml" />
+    <Content Include="Views\Recipes\Create.cshtml" />
+    <Content Include="Views\Recipes\Delete.cshtml" />
+    <Content Include="Views\Recipes\Details.cshtml" />
+    <Content Include="Views\Recipes\Edit.cshtml" />
+    <Content Include="Views\Recipes\Index.cshtml" />
+    <Content Include="Views\Home\Manage.cshtml" />
+    <Content Include="Views\RecipePlans\Create.cshtml" />
+    <Content Include="Views\RecipePlans\Delete.cshtml" />
+    <Content Include="Views\RecipePlans\Details.cshtml" />
+    <Content Include="Views\RecipePlans\Edit.cshtml" />
+    <Content Include="Views\RecipePlans\Index.cshtml" />
+    <Content Include="Views\Home\Plan.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
