--- a/FIT5032_AssignmentX/FIT5032_AssignmentX/bin/FIT5032_AssignmentX.dll.config
+++ b/FIT5032_AssignmentX/FIT5032_AssignmentX/bin/FIT5032_AssignmentX.dll.config
@@ -10,9 +10,10 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FIT5032_AssignmentX-20200917052946.mdf;Initial Catalog=aspnet-FIT5032_AssignmentX-20200917052946;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="MovesContainer" connectionString="metadata=res://*/Models.Moves.csdl|res://*/Models.Moves.ssdl|res://*/Models.Moves.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\defaultDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-FIT5032_AssignmentX-20200917063308;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-FIT5032_AssignmentX-20200917063308.mdf" />-->
-	  <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-FIT5032_AssignmentX-20200917081240;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-FIT5032_AssignmentX-20200917081240.mdf" />-->
+    <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-FIT5032_AssignmentX-20200917081240;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-FIT5032_AssignmentX-20200917081240.mdf" />-->
+    <add name="MovesContainer" connectionString="metadata=res://*/Models.Moves.csdl|res://*/Models.Moves.ssdl|res://*/Models.Moves.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\defaultDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="RecipeContainer" connectionString="metadata=res://*/Models.Recipe.csdl|res://*/Models.Recipe.ssdl|res://*/Models.Recipe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\defaultDB.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
