--- a/FIT5032_AssignmentX/FIT5032_AssignmentX/bin/FIT5032_AssignmentX.dll.config
+++ b/FIT5032_AssignmentX/FIT5032_AssignmentX/bin/FIT5032_AssignmentX.dll.config
@@ -14,6 +14,7 @@
     <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-FIT5032_AssignmentX-20200917081240;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-FIT5032_AssignmentX-20200917081240.mdf" />-->
     <add name="MovesContainer" connectionString="metadata=res://*/Models.Moves.csdl|res://*/Models.Moves.ssdl|res://*/Models.Moves.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\defaultDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="RecipeContainer" connectionString="metadata=res://*/Models.Recipe.csdl|res://*/Models.Recipe.ssdl|res://*/Models.Recipe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\defaultDB.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MapContainer" connectionString="metadata=res://*/Models.Map.csdl|res://*/Models.Map.ssdl|res://*/Models.Map.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\defaultDB.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -24,7 +25,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" />
+	<httpRuntime  requestValidationMode="2.0" />
     <profile defaultProvider="DefaultProfileProvider">
       <providers>
         <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
