--- a/FIT5032_AssignmentX/FIT5032_AssignmentX/packages.config
+++ b/FIT5032_AssignmentX/FIT5032_AssignmentX/packages.config
@@ -31,5 +31,7 @@
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net472" />
+  <package id="SendGrid" version="9.21.0" targetFramework="net472" />
+  <package id="starkbank-ecdsa" version="1.2.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
