--- a/FIT5032_AssignmentX/FIT5032_AssignmentX/FIT5032_AssignmentX.csproj
+++ b/FIT5032_AssignmentX/FIT5032_AssignmentX/FIT5032_AssignmentX.csproj
@@ -291,6 +291,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="img\background.jpg" />
+    <Content Include="img\gym.png" />
     <Content Include="img\small1-320w.jpg" />
     <Content Include="img\small1.jpg" />
     <Content Include="img\small2-320w.jpg" />
@@ -449,6 +450,7 @@
     <Content Include="Scripts\locales\bootstrap-datepicker.vi.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.zh-CN.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.zh-TW.min.js" />
+    <Content Include="Scripts\location.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
